# gitlab_burndown

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
gitlab_burndown/: config.py  discovery.py  exceptions.py  gitlab.py  plotting.py  transformer.py
tests/: test_config.py  test_discovery.py  test_gitlab.py  test_plotting.py  test_search_project_id_by_project_name.py  test_transformer.py
